--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -476,10 +476,11 @@
 		width: 40px;
 	}
 	.clients-trading-table table tr td {
-		padding: 10px;
+		padding: 10px 0;
+		padding-left: 5px;
 	}
 	.clients-trading-table table tr td {
-		font-size: 14px;
+		font-size: 13px;
 	}
 	.common-heading-area h3 {
 		font-size: 26px;
@@ -498,6 +499,7 @@
 		font-size: 14px;
 		line-height: 20px;
 	}
+	 
 	
 	
 }
