--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,9 +329,7 @@ li.nav-item.dropdown li a {
 	padding: 15px;
 	height: 100%;
 	border-radius: 10px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	 
 }
 .card-view-data-header h3 {
 	font-size: 18px;
@@ -359,8 +357,11 @@ li.nav-item.dropdown li a {
 	font-size: 12px;
 	line-height: 14px;
 }
+.card-view-data-header{
+	min-height: 44px;
+}
 .card-view-body {
-	margin-top:20px;
+	margin-top:15px;
 	margin-bottom:20px;
 	gap: 12px;
 }
@@ -1125,7 +1126,7 @@ button.tablinks.active .tab-svg {
 .clients-trading-table table { border-collapse: separate; border-spacing: 0; }
 .clients-trading-table table tr td,.clients-trading-table table tr th {
     border-bottom: solid 1px rgba(4, 21, 31, 0.10);
-    padding:16px;
+    padding: 12px 16px;
 }
 .bg-tr td{
 	border: none !important;
@@ -1285,7 +1286,8 @@ button.tablinks.active .tab-svg {
 	}
 	.balance-protection-card{
 		border-radius: 10px;
-		padding: 20px 30px;
+		padding: 20px 20px;
+		height: 100%;
 		text-align: center;
 		background: #092139;
 	}
@@ -1299,7 +1301,7 @@ button.tablinks.active .tab-svg {
 		transition:1s;
 		width: 64px;
 	}
-	.balance-protection-card:hover .balance-card-icon{
+	.balance-protection-card:hover .balance-card-icon,.card-3:hover img{
 		background: rgba(255, 255, 255, 0.2);
 		transform: rotateY(360deg);
 	}
@@ -1495,11 +1497,14 @@ button.tablinks.active .tab-svg {
 	border-radius: 10px;
 	padding: 20px 14px;
 	height: 100%;
+	cursor: pointer;
+	transition: 0.5s;
 }
 .card-3 img{
 	height: 64px;
 	width: 64px;
 	border-radius: 50%;
+	transition: 0.5s;
 }
 .card-3 h4 {
 	font-size: 22px;
@@ -1718,4 +1723,31 @@ button.tablinks.active .tab-svg {
 	padding: 10px 12px;
 	border: none;
 	outline: none;
+  }
+  .card-instrument-heading ul{
+	border-bottom: 1.5px solid #FFFFFF1A;
+	padding-bottom:6px;
+	margin-bottom:6px;
+  }
+  .card-instrument-heading ul li{
+	font-size: 16px;
+	font-weight: 500;
+	color:#fff;
+	line-height: 24px;
+  }
+  .card-instrument-body ul li{
+	width: 50%;
+	font-size: 12px;
+	font-weight: 500;
+	margin-bottom: 4px;
+	line-height: 18px;
+	color: #AAA7B5;
+  }
+  .card-instrument-body ul::after{
+	content: "";
+	position: absolute;
+	left: 40%;
+	height: 100%;
+	width:1.5px;
+	background-color: #FFFFFF1A;
   }
