demo account page update

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -456,6 +456,9 @@
 	.tabcontent table th, .tabcontent table td {
 		padding: 8px;
 	}
+	.app-version-btn-2 ul li {
+		font-size: 16px;
+	}
 	.tabcontent table tr td {
 		font-size: 12px;
 	}
@@ -463,7 +466,7 @@
 		margin-right: 0;
 	}
 	.app-version-btn ul li,.payment-option-heading .primary-btn {
-		padding: 6px 15px;
+		padding: 6px 10px;
 		font-size: 15px;
 	}
 	.step-content h4 {
