--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -243,6 +243,12 @@
 		display: flex;
 		flex-direction: column;
 	}
+	.app-version-area {
+		text-align: center;
+	}
+	.app-version-content-body{
+		justify-content: center;
+	}
 }
 
 @media all and (max-width:767px) {
