--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -375,8 +375,12 @@
 		font-size: 18px;
 		line-height: 26px;
 	}
-	.plan-card-option ul li {
-		font-size: 18px;
+	.plan-card-option ul li,.plan-card-option ul li i,.master-trading-progressbar span {
+		font-size: 16px;
+	}
+	.master-trading-progressbar .progress {
+		height: 25px;
+		margin-bottom: 10px;
 	}
 	.mt-0-mb-40{
 		margin-top: 0;
@@ -438,9 +442,19 @@
 	.mt-100{
 		margin-top: 80px;
 	}
+	.potential-left-area,.common-heading-area{
+		text-align: center;
+	}
 
 }
 @media all and (max-width:575px) {
+	.primary-btn{
+		font-size: 16px;
+	}
+	.plan-footer .primary-btn, .plan-footer .primary-btn-bg-transparent {
+		font-size: 16px;
+		padding: 10px 0;
+	}
 	.footer-widgets-area {
 		flex-wrap: wrap;
 		justify-content: space-between;
