--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -870,6 +870,7 @@ button.tablinks.active .tab-svg {
 	font-size: 18px;
 	color:#04151F;
 	opacity: 0.7;
+	max-width: 90%;
 	line-height: 30px;
   }
   .more-details-accordion .accordion-body{
@@ -1836,4 +1837,13 @@ button.tablinks.active .tab-svg {
 	width: 100%;
 	height:550px;
 	border-radius: 10px;
+ }
+ .filter-btn-area ul{
+	gap: 20px;
+ }
+ .filter-btn-area ul li{
+	width: 119px;
+	display: flex;
+	cursor: pointer;
+	justify-content: center;
  }
