--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1881,6 +1881,28 @@ button.tablinks.active .tab-svg {
 	letter-spacing: -0.005em;
 
  } */
+ 
+  .contest-guid-info p{
+	padding:15px 15px;
+  }
+  .contest-guid-info{
+	border: 5px solid #F5C448;
+	width: 100%;
+	border-radius:10px;
+	box-shadow: 0px 16.9px 25.36px 0px #C4CDDA40;
+	position: relative;
+ }
+ .contest-guid-info:after{
+	right:-24px;
+	top: 50%;
+	transform: translateY(-50%);
+	content: "";
+	position: absolute;
+	border-left:10px solid #F5C448;
+	border-right:10px solid transparent;
+	border-top:10px solid transparent;
+	border-bottom:10px solid transparent;
+ }
  .contestant img{
 	border-radius: 50%;
 	max-height: 40px;
@@ -1892,3 +1914,55 @@ button.tablinks.active .tab-svg {
 	height: 24px;
 	width: 24px;
  }
+ .contest-guid-item{
+	width: 55.5%;
+	margin-bottom: 20px;
+	align-items: center;
+	gap: 30px;
+	justify-content: space-between;
+ }
+ .contest-guid .contest-guid-item:nth-child(even){
+	width: 55%;
+	float: right;
+	justify-content: flex-start;
+ }
+ .contest-guid .contest-guid-item:nth-child(even) .contest-guid-title{
+	order: -2;
+ }
+ .contest-guid .contest-guid-item:nth-child(even) .contest-guid-info:after{
+	left:-24px;
+	right: inherit;
+	border-right:10px solid #F5C448;
+	border-left:10px solid transparent;
+ }
+ .contest-guid-title{
+	max-width: 130px;
+	max-height: 130px;
+	min-height: 130px;
+	min-width: 130px;
+	border-radius: 100%;
+	background-color:#F5C448;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+ }
+ .contest-guid-title h6{
+	font-size:26px;
+	font-weight: 600;
+	line-height: 32px;
+	letter-spacing: -0.005em;
+ }
+ .pagination-inner li button{
+	border: none;
+	outline: none;
+	font-size: 15px;
+	min-width:30px;
+	padding: 5px;
+	border-radius:5px;
+	background-color: transparent;
+ }
+ .pagination-inner li button:hover, .pagination-inner li button.active{
+	background-color: #2C88C9;
+	color:#fff;
+ }
+ 
