--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -328,3 +328,68 @@ margin-right: 22px;
 	opacity: 1;
 	color: #04151F66;
 }
+
+/*start modal css*/
+.custom-modal {
+	padding: 40px;
+	background-color: #fff;
+	border: 1.5px solid #FFFFFF1A;
+	border-radius: 20px;
+}
+.page-modal-width {
+	max-width:640px;
+	width: 100%;
+	top: 140px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	margin: 0 auto;
+	border-radius:15px;
+}
+ 
+.form-group label{
+	font-size:16px;
+	font-weight: 400;
+	line-height: 30px;
+	color: #030303;
+}
+.modal-header-area h4{
+	font-size:28px;
+	font-weight: 600;
+	line-height: 33px;
+	color: #04151F;
+	letter-spacing: -0.005em;
+}
+.form-group .primary-btn-bg-transparent{
+	border-color: #04151F4D;
+	color: #04151F !important;
+}
+.btn-1{
+	background-color: transparent;
+	padding:8px 18px;
+	border: 1.5px solid #04151F1A;
+	border-radius: 5px;
+	font-size: 20px;
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+.btn-1:hover{
+	background-color:#ddd;
+}
+.btn-1 img{
+	width: 20px;
+}
+.color-18{
+	color:#1877F2;
+}
+ 
+.login-bg{
+	background-color: #04151F;
+	padding-top: 120px;
+	padding-bottom: 100px;
+}
+.form-group input::placeholder{
+	color: #04151F66;
+}
+.form-group input{
+	padding: 8px 12px;
+}
