--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -390,11 +390,17 @@ margin-right: 22px;
 .color-18{
 	color:#1877F2;
 }
- 
+.page-modal-width{
+	box-shadow: rgba(224, 224, 224, 0.5) 0px 7px 29px 0px;
+}
 .login-bg{
 	background-color: #04151F;
-	padding-top: 120px;
+	background-image: url('../images/bg/negative-balance.png');
+	padding-top: 150px;
 	padding-bottom: 100px;
+	background-position: center center !important;
+	background-size: cover !important;
+	background-repeat: no-repeat !important;
 }
 .form-group input::placeholder{
 	color: #04151F66;
@@ -494,7 +500,7 @@ margin-right: 22px;
 	z-index: 10;
 	margin-top: 10px;
   }
-  
+ 
   .custom-select.open .options {
 	display: block;
   }
