--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -522,9 +522,42 @@ margin-right: 22px;
 	margin-left: auto;
 	visibility: hidden;
   }
-  
   .option.selected .check-icon {
 	visibility: visible;
   }
   
 /* End select box css */
+
+.schedule-time label {
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 30px;
+	color: #030303;
+  }
+  
+  .time-select {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+  
+  .time-select select {
+	padding: 10px 12px;
+	font-size: 1rem;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 100%;
+	outline: none;
+	background-color: transparent;
+  }
+  
+  .time-select select:focus {
+	border: 1px solid #FED233;
+  box-shadow: 0 0 0 .25rem transparent;
+  }
+  .time-select span {
+	margin: 0 8px;
+	font-size: 28px;
+	color: #ccc;
+}
+  
