--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -527,37 +527,35 @@ margin-right: 22px;
   }
   
 /* End select box css */
-
-.schedule-time label {
+ 
+  .schedule-time label {
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 30px;
 	color: #030303;
   }
   
-  .time-select {
+  .time-input {
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
   }
   
-  .time-select select {
-	padding: 10px 12px;
-	font-size: 1rem;
+  .time-input input[type="time"] {
+	width: 100%;
+	padding:8px;
+	font-size: 15px;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	width: 100%;
 	outline: none;
-	background-color: transparent;
   }
   
-  .time-select select:focus {
+  .time-input input[type="time"]:focus {
 	border: 1px solid #FED233;
   box-shadow: 0 0 0 .25rem transparent;
   }
-  .time-select span {
-	margin: 0 8px;
-	font-size: 28px;
-	color: #ccc;
-}
+  
+  .time-input span {
+	margin: 0 12px;
+	font-size: 22px;
+  }
   
